PI-2036 update SB and Java versions