@@ -1,11 +1,5 @@
 package uk.gov.justice.digital.delius.service;
 
-import java.time.LocalDate;
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -14,6 +8,12 @@ import uk.gov.justice.digital.delius.data.api.Attendance.ContactTypeDetail;
 import uk.gov.justice.digital.delius.jpa.standard.entity.Contact;
 import uk.gov.justice.digital.delius.jpa.standard.repository.ContactRepository;
 import uk.gov.justice.digital.delius.transformers.TypesTransformer;
+
+import java.time.LocalDate;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 
 @Slf4j
 @Service
@@ -31,7 +31,7 @@ public class AttendanceService {
     }
 
     public List<Contact> getContactsForEvent(final Long offenderId, final Long eventId, final LocalDate contactDate) {
-        return contactRepository.findByOffenderAndEventId(offenderId, eventId, contactDate);
+        return contactRepository.findByOffenderIdAndEventId(offenderId, eventId, contactDate);
     }
 
     public static List<Attendance> attendancesFor(final List<Contact> contacts) {
@@ -54,6 +54,6 @@ public class AttendanceService {
                     .description(contactEntity.getContactType() != null ? contactEntity.getContactType().getDescription(): null)
                     .build())
                 .build())
-            .collect(Collectors.toList());
+            .toList();
     }
 }
